------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.2 branch)

------------------------------------------------------------------------------


Interchange 5.3.0 not yet released.


UI
--

* Escape HTML tags within ITL test code output.

* Customer Mailing added to edit permissions page.

Foundation
----------

* Void mv_form_profile on changing shipping country in account page.

i18n
----

* Continued translation of UI.

Debian
------

* Added te editor for tab-delimited files (Closes: #132757)


------------------------------------------------------------------------------

(end)