@@ -3,12 +3,17 @@
 		$CGI->{ui_return_to} = 'admin/item';
 	}
 	$CGI->{mv_data_table} = $Config->{ProductFiles}[0];
-	$CGI->{ui_hide_key} = 1 unless $CGI->{ui_new_item};
 	$CGI->{ui_return_to} ||= '__UI_BASE__/item';
 	$Tag->tmpn('tmp_item_id');
 	$Scratch->{tmp_item_id} = $CGI->{item_id} || $CGI->{item_id_left};
 	$Scratch->{tmp_item_id} =~ s/\0.*//
 		or $Scratch->{tmp_item_id} =~ s/,.*//;
+	if ($CGI->{ui_new_item}) {
+		$Scratch->{'item_label'} = '[L]New item[/L]';
+	} else {
+		$Scratch->{'item_label'} = $Scratch->{tmp_item_id};
+		$CGI->{ui_hide_key} = 1;
+	}
 	return;
 [/calc]
 
@@ -32,7 +37,7 @@
 [/if]
 
 [set ui_class]Items[/set]
-[seti page_title][L]Item editor[/L]: [scratch tmp_item_id][/seti]
+[seti page_title][L]Item editor[/L]: [scratchd item_label][/seti]
 [set help_name]edit.item[/set]
 [set icon_name]icon_item.gif[/set]
 
@@ -79,4 +84,4 @@
 [/if-mm]
 
 @_UI_STD_FOOTER_@
-<!-- page: @@MV_PAGE@@ version: $Revision: 2.8 $ -->
+<!-- page: @@MV_PAGE@@ version: $Revision: 2.9 $ -->
