@@ -16,6 +16,11 @@ UI
 
 * Customer Mailing added to edit permissions page.
 
+* Fix the long-standing "page [cgi mv_data_table] not found" error on
+  return from meta_editor.
+
+* Display "New item" in the HTML title of the item editor for new items.
+
 Foundation
 ----------
 
